Fixing spacing of table view, fixing sorting on areas of practice with multiple specializations, clarifying title wording

--- a/app/assets/stylesheets/all/frasernw.css.scss
+++ b/app/assets/stylesheets/all/frasernw.css.scss
@@ -461,7 +461,17 @@ body
       
       th.status_column
       {
-        width: 100px;
+        width: 110px;
+      }
+      
+      th.wait_time_column
+      {
+        width: 110px;
+      }
+      
+      th.specialty_column
+      {
+        min-width: 80px;
       }
       
       tr td 
